--- a/src/components/EmojiGame/index.css
+++ b/src/components/EmojiGame/index.css
@@ -1,1 +1,25 @@
 /* Write your code here. */
+.emoji-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: cover;
+  justify-content: center;
+  padding: 20px;
+}
+li {
+  list-style-type: none;
+}
+button {
+  height: 160px;
+  width: 160px;
+  border-radius: 20px;
+  padding: 5px;
+  border: none;
+  margin: 1px;
+}
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
