--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -1,1 +1,13 @@
 /* Write your code here. */
+nav {
+  display: flex;
+  justify-content: space-between;
+  background-color: aqua;
+  color: white;
+  padding: 10px;
+}
+.scores {
+  display: flex;
+  justify-content: space-around;
+  width: 200px;
+}
