--- a/src/components/EmojiGame/index.css
+++ b/src/components/EmojiGame/index.css
@@ -4,7 +4,10 @@
   flex-wrap: wrap;
   width: cover;
   justify-content: center;
-  padding: 20px;
+  padding: 30px;
+  width: 50vw;
+  background-color: blueviolet;
+  border-radius: 20px;
 }
 li {
   list-style-type: none;
